documentacion/obtenida/ARINC 429/driver and software/PC708-1/API/P71W32.H

typedef void VOID;
typedef int INT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long MSGADDR;
typedef unsigned long * LPMSGADDR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
typedef int SCHNDX;

P71W32API MSGADDR __stdcall PC708_BCCreateMsg(ULONG configval,USHORT cwd1,USHORT cwd2,LPUSHORT data,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedAgain(SCHNDX index,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedBranch(USHORT condition,SCHNDX destindex,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedBranchDin0(SCHNDX destindex,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedBranchDin1(SCHNDX destindex,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedBranchEx(USHORT condition1,USHORT condition2,USHORT condition3,SCHNDX destindex,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_BCSchedBuild(USHORT nummsgs,LPMSGADDR msgaddr,LPUSHORT freq,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedCall(SCHNDX destindex,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedCallCond(USHORT condition,SCHNDX destindex,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedCallCondEx(USHORT condition1,USHORT condition2,USHORT condition3,SCHNDX destindex,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedEntry(HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedFrame(ULONG timeval,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedFrameEnd(HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedFrameStart(ULONG timeval,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedGap(USHORT gapval,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedGoto(SCHNDX destindex,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedHalt(HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedInt(USHORT tagval,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedIntCond(USHORT condition,USHORT tagval,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedIntCondEx(USHORT condition1,USHORT condition2,USHORT condition3,USHORT tagval,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedMsg(MSGADDR msgaddr,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedNop(HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedPause(HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedPulse(HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedPulse0(HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedPulse1(HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedRestart(HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedRetry(USHORT condition,USHORT retries,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedRetryEx(USHORT condition1,USHORT condition2,USHORT condition3,USHORT retryflag,USHORT retries,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedReturn(HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedUser(ULONG useraddr,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSetEntry(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_BCSetTimeout(USHORT timeoutval,HCARD handleval);

P71W32API ULONG __stdcall PC708_BlkAddr(INT taval,HCARD handleval);

P71W32API USHORT __stdcall PC708_BlkOptRd(INT taval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_BlkOptWr(USHORT rtopt,INT taval,HCARD handleval);

P71W32API ULONG __stdcall PC708_BlkPtrRd(INT taval,HCARD handleval);

P71W32API VOID __stdcall PC708_BlkPtrWr(ULONG descaddr,INT taval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_BlkRd(LPUSHORT block,INT taval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_BlkReset(INT taval,HCARD handleval);

P71W32API USHORT __stdcall PC708_BlkSWDRd(INT taval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_BlkSWDWr(USHORT swdval,INT taval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_BlkWipe(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_BlkWr(LPUSHORT block,INT taval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_CardBoot(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_CardCloseAll(VOID);

P71W32API ERRVAL __stdcall PC708_CardConfig(BOOL enableflag,USHORT command,USHORT taval,HCARD handleval);

P71W32API ULONG __stdcall PC708_CardGetInfo(USHORT infotype,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_CardGetInfoEx(LPUSHORT bufmodel,USHORT bufmodelcount,LPUSHORT buffeature,USHORT buffeaturecount,HCARD handleval);

P71W32API VOID __stdcall PC708_CardInit(VOID);

P71W32API BOOL __stdcall PC708_CardIsRunning(HCARD handleval);