documentacion/obtenida/ARINC 429/driver and software/PC708-1/API/P71W32NET.CS

        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCCreateMsg@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_BCCreateMsg(UInt32 configval, UInt16 cwd1, UInt16 cwd2, ref UInt16 data, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSchedAgain@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSchedAgain(Int32 index, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSchedBranch@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSchedBranch(UInt16 condition, Int32 destindex, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSchedBranchDin0@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSchedBranchDin0(Int32 destindex, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSchedBranchDin1@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSchedBranchDin1(Int32 destindex, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSchedBranchEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSchedBranchEx(UInt16 condition1, UInt16 condition2, UInt16 condition3, Int32 destindex, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSchedBuild@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSchedBuild(UInt16 nummsgs, ref UInt32 msgaddr, ref UInt16 freq, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSchedCall@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSchedCall(Int32 destindex, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSchedCallCond@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSchedCallCond(UInt16 condition, Int32 destindex, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSchedCallCondEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSchedCallCondEx(UInt16 condition1, UInt16 condition2, UInt16 condition3, Int32 destindex, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSchedEntry@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSchedEntry(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSchedFrame@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSchedFrame(UInt32 timeval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSchedFrameEnd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSchedFrameEnd(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSchedFrameStart@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSchedFrameStart(UInt32 timeval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSchedGap@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSchedGap(UInt16 gapval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSchedGoto@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSchedGoto(Int32 destindex, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSchedHalt@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSchedHalt(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSchedInt@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSchedInt(UInt16 tagval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSchedIntCond@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSchedIntCond(UInt16 condition, UInt16 tagval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSchedIntCondEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSchedIntCondEx(UInt16 condition1, UInt16 condition2, UInt16 condition3, UInt16 tagval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSchedMsg@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSchedMsg(UInt32 msgaddr, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSchedNop@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSchedNop(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSchedPause@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSchedPause(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSchedPulse@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSchedPulse(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSchedPulse0@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSchedPulse0(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSchedPulse1@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSchedPulse1(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSchedRestart@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSchedRestart(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSchedRetry@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSchedRetry(UInt16 condition, UInt16 retries, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSchedRetryEx@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSchedRetryEx(UInt16 condition1, UInt16 condition2, UInt16 condition3, UInt16 retryflag, UInt16 retries, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSchedReturn@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSchedReturn(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSchedUser@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSchedUser(UInt32 useraddr, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSetEntry@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSetEntry(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCSetTimeout@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCSetTimeout(UInt16 timeoutval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BlkAddr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_BlkAddr(Int32 taval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BlkOptRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_BlkOptRd(Int32 taval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BlkOptWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BlkOptWr(UInt16 rtopt, Int32 taval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BlkPtrRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_BlkPtrRd(Int32 taval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BlkPtrWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_BlkPtrWr(UInt32 descaddr, Int32 taval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BlkRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BlkRd(ref UInt16 block, Int32 taval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BlkReset@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BlkReset(Int32 taval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BlkSWDRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_BlkSWDRd(Int32 taval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BlkSWDWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BlkSWDWr(UInt16 swdval, Int32 taval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BlkWipe@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BlkWipe(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BlkWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BlkWr(ref UInt16 block, Int32 taval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CardBoot@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_CardBoot(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CardCloseAll@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_CardCloseAll();
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CardConfig@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_CardConfig(Int32 enableflag, UInt16 command, UInt16 taval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CardGetInfo@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_CardGetInfo(UInt16 infotype, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CardGetInfoEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_CardGetInfoEx(ref UInt16 bufmodel, UInt16 bufmodelcount, ref UInt16 buffeature, UInt16 buffeaturecount, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CardInit@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_CardInit();
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CardIsRunning@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_CardIsRunning(UInt32 handleval);
